--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,12 @@
             <artifactId>druid</artifactId>
             <version>1.1.20</version>
         </dependency>
-
+        <!-- renderQrCode 二维码生成 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
